# agentic-job-hunter

./: .env.example  .gitignore  CLAUDE.md  README.md  profile.yaml  pyproject.toml
.github/workflows/: daily_run.yml
data/: feedback.yaml  jobscout.db
docs/: build-log.md  dev-notes.md  plan-cross-source-dedup.md  session-state.md
src/jobscout/: config.py  models.py  run.py
src/jobscout/adapters/: adzuna.py  base.py  inference.py  jobspy.py  jsearch.py
src/jobscout/delivery/: email_sender.py  formatter.py  writer.py
src/jobscout/evaluation/: evaluator.py  prompt.py
src/jobscout/filters/: dedup.py  hard_filter.py
src/jobscout/ranking/: embedder.py  scorer.py
src/jobscout/storage/: db.py
tests/: test_adapter_jobspy.py  test_adapters.py  test_db.py  test_dedup.py  test_delivery.py  test_evaluation.py  test_filter.py  test_ranking.py
tests/fixtures/: sample_adzuna_response.json  sample_jsearch_response.json
