[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobscout"
version = "0.1.0"
description = "Personal AI job matching pipeline for AI/ML roles in Germany"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.85",
    "sentence-transformers>=5.3",
    "httpx>=0.28",
    "pydantic>=2.12",
    "pyyaml>=6.0",
    "markdown>=3.7",
    "openai>=1.0",
    "numpy>=1.26",
    "rich>=14",
    "python-dotenv>=1.2",
    "resend>=2.0",
    "python-jobspy>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
]

[project.scripts]
jobscout = "jobscout.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
